# inventoryApp

backend/: openapi-schema.yml  pyproject.toml
backend/django_api/: constants.py  settings.py  urls.py
backend/inventory/: models.py  paginations.py  serializers.py  urls.py  views.py
backend/inventory/migrations/: 0001_initial.py  0002_seller_item_seller.py  0003_itemhistory.py  0004_alter_itemhistory_updated_on.py  0005_alter_itemhistory_item_id.py  0006_remove_item_count.py  0007_rename_restaurant_item_restaurant_id_and_more.py  0008_todo.py  0009_item_current_count.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: Modal.vue  Pagination.vue  Search.vue  SideNav.vue
frontend/src/helpers/: constants.js
frontend/src/pages/: Admin.vue  Dashboard.vue  Inventory.vue  ItemHistory.vue  Login.vue  Todo.vue
frontend/src/router/: index.js
frontend/src/temp/: item.json  itemhistory.json  restaurant.json  seller.json  todo.json
